fixed id issue & updated swagger.yaml
