# swagger.yaml
@@ -100,6 +100,103 @@ paths:
         500:
           description: 'Server Error'
 
+  # [GET] recipes
+  /recipes:
+    get:
+      tags:
+        - recipes
+      summary: Find All Recipes
+      responses:
+        200:
+          description: 'OK'
+        500:
+          description: 'Server Error'
+
+    # [POST] recipes
+    post:
+      tags:
+        - recipes
+      summary: Add Recipe
+      parameters:
+        - name: body
+          in: body
+          description: create Recipe dto
+          required: true
+          schema:
+            $ref: '#/definitions/create-recipe-dto'
+      responses:
+        201:
+          description: 'Created'
+        400:
+          description: 'Bad Request'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+  # [GET] recipes/id
+  /recipes/{id}:
+    get:
+      tags:
+        - recipes
+      summary: Find recipe By Id
+      parameters:
+        - name: id
+          in: path
+          description: recipe Id
+          required: true
+      responses:
+        200:
+          description: 'OK'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+    # [PUT] recipe/id
+    put:
+      tags:
+        - recipes
+      summary: Update recipe By Id
+      parameters:
+        - name: id
+          in: path
+          description: recipe Id
+          required: true
+        - name: body
+          in: body
+          description: update recipe dto
+          required: true
+          schema:
+            $ref: '#/definitions/create-recipe-dto'
+      responses:
+        200:
+          description: 'OK'
+        400:
+          description: 'Bad Request'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+    # [DELETE] recipes/id
+    delete:
+      tags:
+        - recipes
+      summary: Delete Recipe By Id
+      parameters:
+        - name: id
+          in: path
+          description: recipe Id
+          required: true
+      responses:
+        200:
+          description: 'OK'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
 # definitions
 definitions:
   create-user-dto:
@@ -135,6 +232,25 @@ definitions:
       userType:
         type: string
         description: user type
+
+
+  create-recipe-dto:
+    type: object
+    required:
+      - title
+      - image
+      - imageType
+    properties:
+      title:
+        type: string
+        description: recipe title
+      image:
+        type: string
+        description: recipe image url
+      imageType:
+        type: string
+        description: recipe imageType
+
 schemes:
  - https
  - http
